fix: remove logs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "skipLibCheck": true,
     "noEmit": false,
     "lib": ["es2020"],
-    "declaration": true,  // Генерация файлов .d.ts для типов
-    "declarationMap": true  // Генерация карт исходников для файлов .d.ts
+    "declaration": true,
+    "declarationMap": true
   }
 }
