--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@nestjs/common": "10.4.8",
-    "@nestjs/core": "^10.4.8",
-    "@remnawave/xtls-sdk": "^0.0.8"
+    "@nestjs/core": "^10.4.8"
+  },
+  "peerDependencies": {
+    "@remnawave/xtls-sdk": "*"
   },
   "author": "Remnawave",
   "keywords": [
