--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@remnawave/xtls-sdk-nestjs",
-  "version": "0.0.13",
+  "version": "0.1.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
+  "license": "MIT",
+  "description": "",
   "scripts": {
     "prepublish": "rm -rf build && tsc",
     "build": "tsc"
@@ -20,7 +22,7 @@
     "@nestjs/core": "^10.4.8"
   },
   "peerDependencies": {
-    "@remnawave/xtls-sdk": "^0.0.8"
+    "@remnawave/xtls-sdk": "0.1.0"
   },
   "author": "Remnawave",
   "keywords": [
@@ -51,7 +53,5 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "typescript": "5.6.3"
-  },
-  "license": "MIT",
-  "description": ""
+  }
 }
