--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remnawave/xtls-sdk-nestjs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "AGPL-3.0-only",
@@ -18,8 +18,8 @@
     "url": "https://github.com/remnawave/xtls-sdk-nestJS/issues"
   },
   "dependencies": {
-    "@nestjs/common": "10.4.8",
-    "@nestjs/core": "^10.4.8"
+    "@nestjs/common": "11.0.6",
+    "@nestjs/core": "11.0.6"
   },
   "peerDependencies": {
     "@remnawave/xtls-sdk": "0.1.0"
