--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "url": "https://github.com/remnawave/xtls-sdk-nestJS/issues"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.6",
-    "@nestjs/core": "^11.0.6"
+    "@nestjs/common": "^11.0.10",
+    "@nestjs/core": "^11.0.10"
   },
   "peerDependencies": {
-    "@remnawave/xtls-sdk": "0.1.0"
+    "@remnawave/xtls-sdk": ">=0.1.3"
   },
   "author": "Remnawave",
   "keywords": [
