--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remnawave/xtls-sdk-nestjs",
-  "version": "0.2.2",
+  "version": "0.4.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "AGPL-3.0-only",
@@ -19,10 +19,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.10",
-    "@nestjs/core": "^11.0.10"
+    "@nestjs/core": "^11.0.10",
+    "nice-grpc": "^2.1.10"
   },
   "peerDependencies": {
-    "@remnawave/xtls-sdk": ">=0.1.3"
+    "@remnawave/xtls-sdk": ">=0.4.1"
   },
   "author": "Remnawave",
   "keywords": [
